Removed channel from download to fix Swag problem
